[gd_scene load_steps=13 format=3 uid="uid://4f1g8hclro8c"]

[ext_resource type="Script" path="res://UI.gd" id="1_tur4a"]
[ext_resource type="Texture2D" uid="uid://cfqoqf35wm8dr" path="res://UI/MoneyBorder.png" id="2_qdt6k"]
[ext_resource type="Texture2D" uid="uid://dtm2rg3jkbm08" path="res://Sodas/SodaSprites/SodaLightSprite_Money.png" id="3_703tr"]
[ext_resource type="Texture2D" uid="uid://dv5qmdighj0mt" path="res://Sodas/SodaSprites/SodaSprite_Money.png" id="4_mfixa"]
[ext_resource type="Texture2D" uid="uid://dp7vhgx57qbwa" path="res://Sodas/SodaSprites/DoublePlusSodaSprite_Money.png" id="5_2o1yw"]
[ext_resource type="Texture2D" uid="uid://dnfjkwp8ct40e" path="res://Sodas/SodaSprites/BerryBurstSodaSprite_Money.png" id="6_ugtas"]
[ext_resource type="Texture2D" uid="uid://qwkul3xnjibu" path="res://Sodas/SodaSprites/GodlySodaSprite_Money.png" id="7_wr61i"]
[ext_resource type="Script" path="res://UI/ShopButton.gd" id="8_8qnlb"]
[ext_resource type="Texture2D" uid="uid://csbf0ebut366j" path="res://UI/ShopIcon.png" id="9_k8isr"]

[sub_resource type="LabelSettings" id="LabelSettings_6tmyr"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_22jcw"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_ne6yw"]
radius = 551.453

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_tur4a")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MoneyBorderSprite" type="Sprite2D" parent="Control/MarginContainer/VBoxContainer"]
position = Vector2(591.05, 138.2)
scale = Vector2(0.58802, 0.500758)
texture = ExtResource("2_qdt6k")

[node name="Money" type="Label" parent="Control/MarginContainer/VBoxContainer/MoneyBorderSprite"]
unique_name_in_owner = true
offset_left = -66.0
offset_top = 26.0
offset_right = -37.0
offset_bottom = 139.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 500
label_settings = SubResource("LabelSettings_6tmyr")
horizontal_alignment = 2
script = SubResource("GDScript_22jcw")

[node name="VerticalPadding" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/VerticalPadding"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="SodaLightSpriteMoney" type="Sprite2D" parent="Control/MarginContainer"]
position = Vector2(20, 26)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_703tr")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/SodaLightSpriteMoney"]
offset_left = 115.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 75.0

[node name="LightSodaLabel" type="Label" parent="Control/MarginContainer/SodaLightSpriteMoney/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 75
horizontal_alignment = 2
vertical_alignment = 1

[node name="SodaSpriteMoney" type="Sprite2D" parent="Control/MarginContainer"]
position = Vector2(20, 72)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_mfixa")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/SodaSpriteMoney"]
offset_left = 115.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 75.0

[node name="SodaLabel" type="Label" parent="Control/MarginContainer/SodaSpriteMoney/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 75
horizontal_alignment = 2
vertical_alignment = 1

[node name="DoublePlusSodaSpriteMoney" type="Sprite2D" parent="Control/MarginContainer"]
position = Vector2(21, 115)
scale = Vector2(0.04, 0.04)
texture = ExtResource("5_2o1yw")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/DoublePlusSodaSpriteMoney"]
offset_left = 475.0
offset_top = -250.0
offset_right = 725.0
offset_bottom = 525.0

[node name="DoublePlusSodaLabel" type="Label" parent="Control/MarginContainer/DoublePlusSodaSpriteMoney/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 400
horizontal_alignment = 2
vertical_alignment = 1

[node name="BerryBurstSodaSpriteMoney" type="Sprite2D" parent="Control/MarginContainer"]
position = Vector2(19, 161)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_ugtas")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/BerryBurstSodaSpriteMoney"]
offset_left = 115.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 75.0

[node name="BerryBurstSodaLabel" type="Label" parent="Control/MarginContainer/BerryBurstSodaSpriteMoney/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 75
horizontal_alignment = 2
vertical_alignment = 1

[node name="GodlySodaSpriteMoney" type="Sprite2D" parent="Control/MarginContainer"]
position = Vector2(19, 207)
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_wr61i")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/GodlySodaSpriteMoney"]
offset_left = 115.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 75.0

[node name="GodlySodaLabel" type="Label" parent="Control/MarginContainer/GodlySodaSpriteMoney/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 75
horizontal_alignment = 2
vertical_alignment = 1

[node name="ShopButton" type="Area2D" parent="Control/MarginContainer"]
position = Vector2(62, 585)
scale = Vector2(0.1, 0.1)
script = ExtResource("8_8qnlb")

[node name="ShopButtonCollision" type="CollisionShape2D" parent="Control/MarginContainer/ShopButton"]
position = Vector2(10, 10)
shape = SubResource("CircleShape2D_ne6yw")

[node name="ShopButtonSprite" type="Sprite2D" parent="Control/MarginContainer/ShopButton"]
texture = ExtResource("9_k8isr")
